# RT-DETR

rtdetr_pytorch/: README.md  pyproject.toml  requirements.txt  setup.py
rtdetr_pytorch/configs/dataset/: coco_detection_2560.yml
rtdetr_pytorch/configs/rtdetr/: rtdetr_r50vd_6x_coco_2560.yml  rtdetr_r50vd_6x_coco_singleton.yaml  rtdetr_r50vd_6x_coco_singleton.yml  rtdetr_r50vd_6x_coco_test.yml
rtdetr_pytorch/configs/rtdetr/include/: dataloader_2560.yml  optimizer.yml  rtdetr_r50vd_2560.yml
rtdetr_pytorch/src/rtdetr/: __init__.py
rtdetr_pytorch/src/rtdetr/data/: dataloader.py  transforms.py
rtdetr_pytorch/src/rtdetr/data/cifar10/: __init__.py
rtdetr_pytorch/src/rtdetr/data/coco/: coco_dataset.py  coco_eval.py
rtdetr_pytorch/src/rtdetr/nn/arch/: classification.py
rtdetr_pytorch/src/rtdetr/nn/backbone/: presnet.py  test_resnet.py
rtdetr_pytorch/src/rtdetr/nn/criterion/: __init__.py
rtdetr_pytorch/src/rtdetr/optim/: amp.py  ema.py  optim.py
rtdetr_pytorch/src/rtdetr/solver/: det_engine.py  det_solver.py  solver.py
rtdetr_pytorch/src/rtdetr/zoo/rtdetr/: hybrid_encoder.py  matcher.py  rtdetr.py  rtdetr_criterion.py  rtdetr_decoder.py  rtdetr_postprocessor.py
rtdetr_pytorch/tools/: export_onnx.py  train.py
