[project]
name = "rtdetr"
version = "1.0"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "onnx==1.14.0",
    "onnxruntime==1.15.1",
    "pycocotools",
    "PyYAML",
    "scipy",
    "numpy==1.24.4",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.sdist]
include = [
  "src/*",
]
[tool.hatch.build.targets.wheel]
packages = ["src/rtdetr"]