[project]
name = "rtdetr"
version = "1.0"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "torchvision",
    "onnx",
    "onnxruntime",
    "pycocotools",
    "PyYAML",
    "scipy",
    "numpy",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.sdist]
include = [
  "src/*",
]
[tool.hatch.build.targets.wheel]
packages = ["src/rtdetr"]